Update AStarCatMovement.java