@@ -1,13 +1,12 @@
 package com.atraparalagato.impl.strategy;
-
 import com.atraparalagato.base.model.GameBoard;
 import com.atraparalagato.base.strategy.CatMovementStrategy;
+import com.atraparalagato.impl.model.HexGameBoard;
 import com.atraparalagato.impl.model.HexPosition;
-
 import java.util.*;
 import java.util.function.Function;
 import java.util.function.Predicate;
-
+import java.util.stream.Collectors;
 /**
  * Implementación esqueleto de estrategia de movimiento usando algoritmo A*.
  * 
@@ -19,105 +18,125 @@ import java.util.function.Predicate;
  * - Estructuras de Datos: PriorityQueue, Map, Set
  */
 public class AStarCatMovement extends CatMovementStrategy<HexPosition> {
-    
     public AStarCatMovement(GameBoard<HexPosition> board) {
         super(board);
     }
-    
-    @Override
-    protected List<HexPosition> getPossibleMoves(HexPosition currentPosition) {
-        // TODO: Obtener movimientos válidos desde la posición actual
-        // Usar board.getAdjacentPositions() y filtrar posiciones válidas
-        // No incluir posiciones bloqueadas
-        // 
-        // Pista: Usar streams para filtrar
-        // return board.getAdjacentPositions(currentPosition).stream()
-        //     .filter(pos -> !board.isBlocked(pos))
-        //     .collect(Collectors.toList());
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+
+    // TODO: Implementar selección del mejor movimiento usando A*
+    public Optional<HexPosition> getNextMove(HexGameBoard board, HexPosition catPosition) {
+        // registra todos los movimientos posibles
+        List<HexPosition> possibleMoves = board.getAdjacentPositions(catPosition).stream()
+                .filter(pos -> !board.isBlocked(pos))
+                .toList();
+        // se usa selectBestMove para determinar el mejor movimiento
+        return selectBestMove(possibleMoves, catPosition, null);
     }
-    
+
     @Override
-    protected Optional<HexPosition> selectBestMove(List<HexPosition> possibleMoves, 
-                                                  HexPosition currentPosition, 
+    public List<HexPosition> getPossibleMoves(HexPosition currentPosition) {
+        // TODO: Obtener movimientos válidos desde la posición actual
+        // entrega los hexagonos adyacentes que no se encuentren bloqueados
+        return board.getAdjacentPositions(currentPosition).stream()
+                .filter(pos -> !board.isBlocked(pos))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Optional<HexPosition> selectBestMove(List<HexPosition> possibleMoves,
+                                                  HexPosition currentPosition,
                                                   HexPosition targetPosition) {
         // TODO: Implementar selección del mejor movimiento usando A*
-        // Calcular f(n) = g(n) + h(n) para cada movimiento posible
-        // g(n) = costo desde inicio hasta n
-        // h(n) = heurística desde n hasta objetivo
-        // Retornar el movimiento con menor f(n)
-        // 
-        // Pista: Usar Function para calcular costos y comparar
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        if (possibleMoves.isEmpty()) return Optional.empty();
+        Function<HexPosition, Double> heuristic = getHeuristicFunction(targetPosition);
+        // registra todos los movimientos posibles
+        return possibleMoves.stream()
+                .min(Comparator.comparing(move ->
+                        getMoveCost(currentPosition, move) + heuristic.apply(move)
+                ));
+        // se usa selectBestMove para determinar el mejor movimiento
     }
-    
+
     @Override
     protected Function<HexPosition, Double> getHeuristicFunction(HexPosition targetPosition) {
         // TODO: Implementar función heurística
-        // Para tablero hexagonal, usar distancia hexagonal
-        // La heurística debe ser admisible (nunca sobreestimar el costo real)
-        // 
-        // Ejemplo:
-        // return position -> position.distanceTo(targetPosition);
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // calculo de distancia axial o hexagonal heuristica
+        return position -> (double) position.distanceTo(targetPosition);
     }
-    
+
     @Override
     protected Predicate<HexPosition> getGoalPredicate() {
         // TODO: Definir qué posiciones son objetivos válidos
-        // Para "atrapar al gato", el objetivo son las posiciones del borde
-        // 
-        // Pista: Una posición está en el borde si está en el límite del tablero
-        // return position -> Math.abs(position.getQ()) == board.getSize() ||
-        //                   Math.abs(position.getR()) == board.getSize() ||
-        //                   Math.abs(position.getS()) == board.getSize();
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // lo que determinamos objetivos son las casillas borde
+        int size = board.getSize();
+        return pos -> Math.abs(pos.getQ()) == size ||
+                      Math.abs(pos.getR()) == size ||
+                      Math.abs(pos.getS()) == size;
     }
-    
+
     @Override
     protected double getMoveCost(HexPosition from, HexPosition to) {
         // TODO: Calcular costo de moverse entre dos posiciones
-        // Para tablero hexagonal, normalmente es 1.0 para posiciones adyacentes
-        // Puede variar según reglas específicas del juego
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // costo de movimiento adyacente constante
+        return 1.0;
     }
-    
+
     @Override
     public boolean hasPathToGoal(HexPosition currentPosition) {
         // TODO: Verificar si existe camino desde posición actual hasta cualquier objetivo
-        // Usar BFS o A* para explorar hasta encontrar una posición objetivo
-        // Retornar true si se encuentra camino, false si no
-        // 
-        // Pista: Usar getGoalPredicate() para identificar objetivos
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // se usa el algo BFS para buscar el camino hacia un objetivo (hexagono al borde del tablero)
+        Set<HexPosition> visited = new HashSet<>();
+        Queue<HexPosition> queue = new LinkedList<>();
+        Predicate<HexPosition> isGoal = getGoalPredicate();
+        queue.add(currentPosition);
+        visited.add(currentPosition);
+        while (!queue.isEmpty()) {
+            HexPosition pos = queue.poll();
+            if (isGoal.test(pos)) return true;
+            for (HexPosition neighbor : getPossibleMoves(pos)) {
+                if (!visited.contains(neighbor)) {
+                    visited.add(neighbor);
+                    queue.add(neighbor);
+                }
+            }
+        }
+        return false;
     }
-    
+
     @Override
     public List<HexPosition> getFullPath(HexPosition currentPosition, HexPosition targetPosition) {
         // TODO: Implementar A* completo para obtener el camino completo
-        // Usar PriorityQueue para nodos a explorar
-        // Mantener Map de padres para reconstruir el camino
-        // Retornar lista de posiciones desde inicio hasta objetivo
-        // 
-        // Estructura sugerida:
-        // 1. Inicializar estructuras de datos (openSet, closedSet, gScore, fScore, cameFrom)
-        // 2. Agregar posición inicial a openSet
-        // 3. Mientras openSet no esté vacío:
-        //    a. Tomar nodo con menor fScore
-        //    b. Si es objetivo, reconstruir y retornar camino
-        //    c. Mover a closedSet
-        //    d. Para cada vecino válido, calcular scores y actualizar
-        // 4. Si no se encuentra camino, retornar lista vacía
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // se usa A* para mostrar el camino completo
+        Function<HexPosition, Double> heuristic = getHeuristicFunction(targetPosition);
+        Set<HexPosition> closedSet = new HashSet<>();
+        Map<HexPosition, Double> gScore = new HashMap<>();
+        PriorityQueue<AStarNode> openSet = new PriorityQueue<>(Comparator.comparingDouble(n -> n.fScore));
+        gScore.put(currentPosition, 0.0);
+        openSet.add(new AStarNode(currentPosition, 0.0, heuristic.apply(currentPosition), null));
+        while (!openSet.isEmpty()) {
+            AStarNode current = openSet.poll();
+            if (current.position.equals(targetPosition)) {
+                return reconstructPath(current);
+            }
+            closedSet.add(current.position);
+            for (HexPosition neighbor : getPossibleMoves(current.position)) {
+                if (closedSet.contains(neighbor)) continue;
+                double tentativeG = current.gScore + getMoveCost(current.position, neighbor);
+                if (tentativeG < gScore.getOrDefault(neighbor, Double.POSITIVE_INFINITY)) {
+                    gScore.put(neighbor, tentativeG);
+                    double fScore = tentativeG + heuristic.apply(neighbor);
+                    openSet.add(new AStarNode(neighbor, tentativeG, fScore, current));
+                }
+            }
+        }
+        return Collections.emptyList();
     }
-    
-    // Clase auxiliar para nodos del algoritmo A*
+
+    // aux
     private static class AStarNode {
         public final HexPosition position;
-        public final double gScore; // Costo desde inicio
-        public final double fScore; // gScore + heurística
+        public final double gScore;
+        public final double fScore; 
         public final AStarNode parent;
-        
         public AStarNode(HexPosition position, double gScore, double fScore, AStarNode parent) {
             this.position = position;
             this.gScore = gScore;
@@ -125,25 +144,28 @@ public class AStarCatMovement extends CatMovementStrategy<HexPosition> {
             this.parent = parent;
         }
     }
-    
-    // Método auxiliar para reconstruir el camino
+
+    // TODO: Reconstruir camino desde nodo objetivo hasta inicio
     private List<HexPosition> reconstructPath(AStarNode goalNode) {
-        // TODO: Reconstruir camino desde nodo objetivo hasta inicio
-        // Seguir la cadena de padres hasta llegar al inicio
-        // Retornar lista en orden correcto (desde inicio hasta objetivo)
-        throw new UnsupportedOperationException("Método auxiliar para implementar");
+        List<HexPosition> path = new LinkedList<>();
+        AStarNode current = goalNode;
+        while (current != null) {
+            path.add(0, current.position);
+            current = current.parent;
+        }
+        return path;
     }
-    
-    // Hook methods - los estudiantes pueden override para debugging
+
+    // hook methods - los estudiantes pueden override para debugging
     @Override
     protected void beforeMovementCalculation(HexPosition currentPosition) {
         // TODO: Opcional - logging, métricas, etc.
         super.beforeMovementCalculation(currentPosition);
     }
-    
+
     @Override
     protected void afterMovementCalculation(Optional<HexPosition> selectedMove) {
         // TODO: Opcional - logging, métricas, etc.
         super.afterMovementCalculation(selectedMove);
     }
-} 
+}
